--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--<meta http-equiv="refresh" content="1;url=https://agnoo-nqaaa-aaaah-aaq4q-cai.ic0.app/" />-->
-    <title>DService</title>
+    <title>dService</title>
 </head>
 <body>
-    Hello World!
+    <h1>dService</h1>
 </body>
 </html>
